--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -21,7 +21,7 @@
                 {{#posts}} <!--posts라는 리스트를 순회. 자바의 반복문과 동일-->
                     <tr>
                         <td>{{id}}</td> <!--List에서 뽑아낸 객체의 필드를 사용-->
-                        <td>{{title}}</td>
+                        <td><a href="/posts/update/{{id}}">{{title}}</a></td>
                         <td>{{author}}</td>
                         <td>{{modifiedDate}}</td>
                     </tr>
